apps/pi-dashboard/10-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-dashboard
  namespace: pi-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pi-dashboard
  template:
    metadata:
      labels:
        app: pi-dashboard
    spec:
      tolerations:
      - key: "role-purpose"
        operator: "Equal"
        value: "display"
        effect: "NoSchedule"
      containers:
        - name: pi-dashboard
          image: quangsumi/pi-dashboard:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 128Mi
