apps/pi-dashboard/20-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-dashboard
  namespace: pi-dashboard
  labels:
    app: pi-dashboard
spec:
  type: ClusterIP
  selector:
    app: pi-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
