apps/pi-dashboard/00-pi-dashboard.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pi-dashboard
  labels:
    pod-security.kubernetes.io/enforce: restricted        # enforce the restricted policy for all pods in this namespace
    pod-security.kubernetes.io/enforce-version: latest    # use the latest version of k8s PSA to enforce the restricted policy

    pod-security.kubernetes.io/warn: restricted           # warn when a pod does not meet the restricted policy
    pod-security.kubernetes.io/warn-version: latest

    pod-security.kubernetes.io/audit: restricted          # record audit events when a pod does not meet the restricted policy
    pod-security.kubernetes.io/audit-version: latest

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-dashboard
  namespace: pi-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pi-dashboard
  template:
    metadata:
      labels:
        app: pi-dashboard
    spec:
      # by default, pods receive a service account token, which allows them to authenticate to the Kubernetes API.
      # this will prevent the pod from having access to the Kubernetes API
      automountServiceAccountToken: false 

      # 1 pod can have many containers, this security context applies to all containers
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        seccompProfile:
          type: RuntimeDefault # restricts the pod to a default set of syscalls, preventing the use of potentially dangerous ones

      containers:
        - name: pi-dashboard
          image: quangsumi/pi-dashboard:809dbb293db509d1e259111866f6e6357fc2c5af@sha256:e68e27d2bd5cef5a135490d472fe30ac464ebe96d370a80aafbad3575490f6cf
          imagePullPolicy: Always
          
          ports:
            - name: http
              containerPort: 8080

          # important when auto deploying new versions of the app, so that the pod is not killed before the new version is ready
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true # prevents the container from writing to the root filesystem, reducing the risk of tampering with system files
            capabilities:
              drop:
                - ALL
          
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 128Mi

          # readOnlyRootFilesystem: true -> everything in the container is read-only, 
          # so we need to mount a tmp volume for the app nginx to write temp files to
          volumeMounts:
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 16Mi

---
apiVersion: v1
kind: Service
metadata:
  name: pi-dashboard
  namespace: pi-dashboard
  labels:
    app: pi-dashboard
spec:
  type: ClusterIP
  selector:
    app: pi-dashboard
  ports:
    - name: http
      port: 8080
      targetPort: http

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: pi-dashboard-lb
#   namespace: pi-dashboard
#   labels:
#     app: pi-dashboard
# spec:
#   type: LoadBalancer
#   loadBalancerIP: 192.168.63.214
#   selector:
#     app: pi-dashboard
#   ports:
#     - name: http
#       port: 80
#       targetPort: http

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: pi-dashboard-tailscale
#   namespace: pi-dashboard
#   annotations:
#     tailscale.com/funnel: "true"
# spec:
#   ingressClassName: tailscale
#   defaultBackend:
#     service:
#       name: pi-dashboard
#       port:
#         number: 80
#   tls:
#     - hosts:
#         - pi-dashboard

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-dashboard
  namespace: pi-dashboard
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pi-dashboard.lab
      secretName: pi-dashboard-lab-tls
  rules:
    - host: pi-dashboard.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pi-dashboard
                port:
                  number: 8080
