apps/pi-dashboard/31-ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-dashboard-tailscale
  namespace: pi-dashboard
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: pi-dashboard
      port:
        number: 80
  tls:
    - hosts:
        - pi-dashboard
